filter btn mobile z-index fix

--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -184,7 +184,7 @@
         &.mobile-filter-icon-btn {
           height: 46px;
           position: absolute;
-          z-index: 4;
+          z-index: 10;
         }
 
         .sbf-filter {
